--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   website:
+    container_name: korotolecom-website
     build:
       context: ./website
       dockerfile: Dockerfile
@@ -14,6 +15,7 @@ services:
       - .env
 
   bot:
+    container_name: korotolecom-tgbot
     build:
       context: ./bot
       dockerfile: Dockerfile
@@ -25,10 +27,13 @@ services:
     env_file:
       - .env
  
-  db-service:
+  database:
+    container_name: korotolecom-database
     build: 
-      context: ./db-service
-      dockerfile: dockerfile
+      context: ./database
+      dockerfile: Dockerfile
+    depends_on:
+      - mysql
     ports:
       - "8082:8082"
     networks:
@@ -39,7 +44,7 @@ services:
       
   mysql:
     image: mysql:8.0
-    container_name: mysql-db
+    container_name: mysql
     restart: always
     ports:
       - "3306:3306"
@@ -47,10 +52,13 @@ services:
       - korotole_network
     volumes:
       - mysql_data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=11
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   redis:
     image: redis:7.2-alpine
